--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,96 @@
+.apps {
+  width: 170vw;
+  height: 100vh;
+  overflow-y: hidden;
+  background-color: #00000050;
+  z-index: 0;
+}
 .main {
+  width: auto;
+  overflow-y: hidden;
+}
+
+.h1 {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  font-family: "Caveat", cursive;
+  letter-spacing: 0.5rem;
+  text-align: center;
+  font-weight: 500;
+  font-size: 8rem;
+  text-shadow: 0 0 5px #555;
+  color: #fff;
+}
+.vid {
+  width: auto;
+  height: 121vh;
+  overflow-y: hidden;
+  background-color: #00000090;
+  z-index: -1;
+}
+.vid:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 1);
+  z-index: 0;
+}
+.content {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  background-color: transparent;
+  z-index: 10;
+  display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+}
+.c_left {
+  width: 58.5%;
+  height: auto;
+  padding: 0 0 150px 0;
+}
+.left_cmp {
+  width: fit-content;
+  height: auto;
+  margin: 0 auto;
+}
+.c_right {
+  width: 41.5%;
+  height: 200px;
+}
+.right_cmp {
+  width: fit-content;
+  height: auto;
+  margin: 0 10% 0 0;
+  padding: 0;
+}
+.small {
+  font-family: "Caveat", cursive;
+  font-weight: 400;
+  font-size: 25px;
+  color: #fff;
+  text-shadow: 0 0 5px #555;
+  text-align: center;
+}
+.names {
+  width: 400px;
+  height: 50px;
+  padding: 5px 0 0 0;
+  background-color: #eeeeee;
+  opacity: 0.8;
+}
+.range {
+  width: 20%;
+  height: 50px;
+  padding: 5px 0 0 0;
+  background-color: #eeeeee;
+  opacity: 0.8;
 }
 
 .description {
@@ -97,7 +183,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -125,7 +211,7 @@
 
 .thirteen::before,
 .thirteen::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
 }
