--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,12 +1,13 @@
 .header {
-  z-index: 100;
+  z-index: 0;
   width: auto;
   height: 60px;
-  opacity: 0;
   margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: sticky;
+  top: 0;
 }
 .a {
   text-decoration: none;
