add：カーソル変更

--- a/src/styles/Results.module.css
+++ b/src/styles/Results.module.css
@@ -39,6 +39,7 @@
   transition: transform 0.5s;
 }
 .rescard:hover {
+  cursor: pointer;
   transform: scale(1.1);
   transition: transform 0.5s;
 }
