--- a/src/styles/ResultsDetail.module.css
+++ b/src/styles/ResultsDetail.module.css
@@ -5,8 +5,8 @@
 }
 .main {
   width: 100%;
-  height: 70vh;
-  padding: 3% 0 0 0;
+  height: 69vh;
+  padding: 5% 0 0 0;
   display: flex;
   justify-content: center;
 }
@@ -15,9 +15,15 @@
   height: 100%;
 }
 .card_cmp {
-  width: 80%;
-  height: 80%;
+  width: 85%;
+  height: 85%;
+  margin: 3% auto 0 auto;
 }
 .h2 {
-  font-size: 30px;
+  font-size: 28px;
+}
+.subc {
+  font-size: 17px;
+  line-height: 20px;
+  padding: 0 0 10px 0;
 }
